.repair-merge/repo/pkg/plugins/policies/meshhttproute/plugin/v1alpha1/testdata/basic-real-meshservice-labels.clusters.golden.yaml
resources:
- name: kri_msvc_default___backend-second_80
  resource:
    '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    edsClusterConfig:
      edsConfig:
        ads: {}
        resourceApiVersion: V3
    name: kri_msvc_default___backend-second_80
    transportSocket:
      name: envoy.transport_sockets.tls
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        commonTlsContext:
          alpnProtocols:
          - kuma
          combinedValidationContext:
            defaultValidationContext:
              matchTypedSubjectAltNames:
              - matcher:
                  exact: spiffe://default/backend-second
                sanType: URI
            validationContextSdsSecretConfig:
              name: system_mtls_ca_default
              sdsConfig:
                ads: {}
                resourceApiVersion: V3
          tlsCertificateSdsSecretConfigs:
          - name: system_mtls_identity_default
            sdsConfig:
              ads: {}
              resourceApiVersion: V3
        sni: acf231f64f40a7325.backend-second.80.default.ms
    type: EDS
    typedExtensionProtocolOptions:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicitHttpConfig:
          http2ProtocolOptions: {}
- name: kri_msvc_default___backend_80
  resource:
    '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    edsClusterConfig:
      edsConfig:
        ads: {}
        resourceApiVersion: V3
    name: kri_msvc_default___backend_80
    transportSocket:
      name: envoy.transport_sockets.tls
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        commonTlsContext:
          alpnProtocols:
          - kuma
          combinedValidationContext:
            defaultValidationContext:
              matchTypedSubjectAltNames:
              - matcher:
                  exact: spiffe://default/backend
                sanType: URI
            validationContextSdsSecretConfig:
              name: system_mtls_ca_default
              sdsConfig:
                ads: {}
                resourceApiVersion: V3
          tlsCertificateSdsSecretConfigs:
          - name: system_mtls_identity_default
            sdsConfig:
              ads: {}
              resourceApiVersion: V3
        sni: a601e0c00295a9fbe.backend.80.default.ms
    type: EDS
    typedExtensionProtocolOptions:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicitHttpConfig:
          http2ProtocolOptions: {}
- name: kri_msvc_default___backend_test-port
  resource:
    '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    edsClusterConfig:
      edsConfig:
        ads: {}
        resourceApiVersion: V3
    name: kri_msvc_default___backend_test-port
    transportSocket:
      name: envoy.transport_sockets.tls
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        commonTlsContext:
          alpnProtocols:
          - kuma
          combinedValidationContext:
            defaultValidationContext:
              matchTypedSubjectAltNames:
              - matcher:
                  exact: spiffe://default/backend
                sanType: URI
            validationContextSdsSecretConfig:
              name: system_mtls_ca_default
              sdsConfig:
                ads: {}
                resourceApiVersion: V3
          tlsCertificateSdsSecretConfigs:
          - name: system_mtls_identity_default
            sdsConfig:
              ads: {}
              resourceApiVersion: V3
        sni: a601e0c00295a9fbe.backend.80.default.ms
    type: EDS
    typedExtensionProtocolOptions:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicitHttpConfig:
          http2ProtocolOptions: {}
